parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-20.snap
---
source: parser/src/parser/parser.rs
description: "class a[T: U, *V, **W]: pass\n"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 29,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 29,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 24,
                                end: 28,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 8,
                                end: 12,
                            },
                            name: "T",
                            bound: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 11,
                                            end: 12,
                                        },
                                        id: "U",
                                    },
                                ),
                            ),
                        },
                    ),
                    TypeVarTuple(
                        TypeVarTuple {
                            node: Node {
                                start: 14,
                                end: 16,
                            },
                            name: "V",
                        },
                    ),
                    ParamSpec(
                        ParamSpec {
                            node: Node {
                                start: 18,
                                end: 21,
                            },
                            name: "W",
                        },
                    ),
                ],
            },
        ),
    ],
}
