parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@dict.py-10.snap
---
source: parser/src/parser/parser.rs
description: "di = {1: \"name\", **{2: \"name2\"}, 3: \"name3\"}\n"
input_file: parser/test_data/inputs/one_liners/dict.py
---
Module {
    node: Node {
        start: 0,
        end: 45,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 44,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 2,
                            },
                            id: "di",
                        },
                    ),
                ],
                value: Dict(
                    Dict {
                        node: Node {
                            start: 5,
                            end: 44,
                        },
                        keys: [
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 6,
                                        end: 7,
                                    },
                                    value: 1,
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 33,
                                        end: 34,
                                    },
                                    value: 3,
                                },
                            ),
                        ],
                        values: [
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 9,
                                        end: 15,
                                    },
                                    value: "name",
                                },
                            ),
                            Dict(
                                Dict {
                                    node: Node {
                                        start: 19,
                                        end: 31,
                                    },
                                    keys: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 20,
                                                    end: 21,
                                                },
                                                value: 2,
                                            },
                                        ),
                                    ],
                                    values: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 23,
                                                    end: 30,
                                                },
                                                value: "name2",
                                            },
                                        ),
                                    ],
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 36,
                                        end: 43,
                                    },
                                    value: "name3",
                                },
                            ),
                        ],
                    },
                ),
            },
        ),
    ],
}
