parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@dict.py-3.snap
---
source: parser/src/parser/parser.rs
description: "{a: b\n, c: d},"
input_file: parser/test_data/inputs/one_liners/dict.py
---
Module {
    node: Node {
        start: 0,
        end: 14,
    },
    body: [
        ExpressionStatement(
            Tuple(
                Tuple {
                    node: Node {
                        start: 0,
                        end: 14,
                    },
                    elements: [
                        Dict(
                            Dict {
                                node: Node {
                                    start: 0,
                                    end: 13,
                                },
                                keys: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 1,
                                                end: 2,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 8,
                                                end: 9,
                                            },
                                            id: "c",
                                        },
                                    ),
                                ],
                                values: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 4,
                                                end: 6,
                                            },
                                            id: "b",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 11,
                                                end: 12,
                                            },
                                            id: "d",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
