parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@dict.py-6.snap
---
source: parser/src/parser/parser.rs
description: "{a: b, c: d,}"
input_file: parser/test_data/inputs/one_liners/dict.py
---
Module {
    node: Node {
        start: 0,
        end: 13,
    },
    body: [
        ExpressionStatement(
            Dict(
                Dict {
                    node: Node {
                        start: 0,
                        end: 13,
                    },
                    keys: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                id: "c",
                            },
                        ),
                    ],
                    values: [
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 10,
                                    end: 11,
                                },
                                id: "d",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
