parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@dict.py-8.snap
---
source: parser/src/parser/parser.rs
description: "{1: \"name\" for name in get_names()\n}"
input_file: parser/test_data/inputs/one_liners/dict.py
---
Module {
    node: Node {
        start: 0,
        end: 36,
    },
    body: [
        ExpressionStatement(
            DictComp(
                DictComp {
                    node: Node {
                        start: 0,
                        end: 36,
                    },
                    key: Constant(
                        Constant {
                            node: Node {
                                start: 1,
                                end: 2,
                            },
                            value: 1,
                        },
                    ),
                    value: Constant(
                        Constant {
                            node: Node {
                                start: 4,
                                end: 10,
                            },
                            value: "name",
                        },
                    ),
                    generators: [
                        Comprehension {
                            node: Node {
                                start: 11,
                                end: 34,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 15,
                                        end: 19,
                                    },
                                    id: "name",
                                },
                            ),
                            iter: Call(
                                Call {
                                    node: Node {
                                        start: 23,
                                        end: 34,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 23,
                                                end: 32,
                                            },
                                            id: "get_names",
                                        },
                                    ),
                                    args: [],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                    ],
                },
            ),
        ),
    ],
}
